[CMP-84] Fix issue where widget row buttons exceeded the bounds of their container.
Also removed the horizontal scrollbar from appearing in Firefox

--- a/stylesheets/_grid-operations.scss
+++ b/stylesheets/_grid-operations.scss
@@ -146,7 +146,7 @@ $cyan : #ea33a3;
 .grid-container {
     float: left; // need's to have height so we can drop things on it
     position: relative;
-    overflow: auto;
+    overflow: hidden;
     margin-bottom: 1.2em;
     clear: both;
     &:hover, &.operating-on-child {
@@ -155,14 +155,15 @@ $cyan : #ea33a3;
         }
     }
     .row-handler {
-        padding: 0.4em;
+        background: #FFF;
+        -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.3);
+                box-shadow: 0 1px 2px rgba(0,0,0,.3);
         color: #333;
         cursor: move;
         opacity: .6;
+        overflow: hidden;
+        padding: 0.4em;
         position: relative;
-        background: #FFF;
-        -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.3);
-        box-shadow: 0 1px 2px rgba(0,0,0,.3);
         z-index: 999;
         .remove-row, .fill-row {
             color: #333;
